<resources>
    <string name="app_name">Bars-coop</string>
    <string name="login_btn">Login</string>
    <string name="title_add_establishment">ajouter un Bar</string>
    <string name="hint_add_establishment">Veuillez ajouter le nom</string>
    <string name="cancel_add_establishment">annuler</string>
    <string name="ok_add_establishment">ajouter</string>
    <string name="marker_msg">clicker pour voir les info</string>
    <string name="title_establishment">Bar</string>
    <string name="test">test</string>
    <string name="add_drink_btn">ajouter une boisson</string>
    <string name="add_comment_btn">+ comment</string>
    <string name="map_box_id">pk.eyJ1IjoiamVyZW1pZTAwMCIsImEiOiJjajZtbmQxNWQyaHVvMzNueW4wa2k0ejJtIn0.KlQLHwiDKhXCI3gobANT9Q</string>
    <string name="event_title">Evenement</string>
    <string name="add_event_btn">+ event</string>
    <string name="login">Identifiant</string>
    <string name="mdp">Mot de passe</string>
    <string name="title">EveryDay Drinking</string>
    <string name="btn_Inscrit"> Inscription</string>
    <string name="log_up"> Inscription </string>
    <string name="name"> Nom</string>
    <string name="firstname"> Prenom </string>
    <string name="Verifmdp"> Confirmation du mot de passe</string>
    <string name="title_add_comment">ajouter un commentaire</string>
    <string name="title_add_event">ajouter un evenement</string>
    <string name="hint_add_comment">comentaire</string>
    <string name="hint_add_event">evenement</string>
    <string name="title_rating_add_comment">etablisement note</string>
    
</resources>
