<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:text="@string/title_add_comment"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:gravity="center"
        android:background="@color/colorPrimary"/>
    <EditText
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/comment_text"
        android:hint="@string/hint_add_comment"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_rating_add_comment"
        android:textSize="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center" />
    <RatingBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/comment_rating_bar"
        android:numStars="5"
        android:stepSize="0.5"
        android:rating="5"
        android:clickable="true"/>
    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_add_establishment"
            android:id="@+id/cancel_add_comment"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/cancel_add_comment"
            android:text="@string/ok_add_establishment"
            android:id="@+id/ok_add_comment"/>


    </RelativeLayout>

</LinearLayout>