<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:text="@string/title_add_establishment"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:gravity="center"
        android:background="@color/colorPrimary"/>
    <EditText
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name_Bar"
        android:hint="@string/hint_add_establishment"/>
    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_add_establishment"
            android:id="@+id/cancel_add_establishment"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/cancel_add_establishment"
            android:text="@string/ok_add_establishment"
            android:id="@+id/ok_add_establishment"/>


    </RelativeLayout>

</LinearLayout>