<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context="com.example.gilian.bars_coop.MainActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    ><!--android:background="#FF69B4"-->
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_columnSpan="1"
            android:layout_row="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="50dp"
            android:textSize="23dp"
            android:id="@+id/title" /><!--android:textColor="#00FF00"-->
    <ImageView
        android:layout_columnSpan="2"
        android:layout_row="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/appli_bar"
        android:layout_gravity="right" />

    </GridLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login"
        android:id="@+id/login" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mdp"
        android:inputType="textPassword"
        android:id="@+id/password" />

    <Button
        android:onClick="checkLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnlogin"
        android:text="@string/login_btn"
        android:layout_gravity="center"
        />
</LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnInscription"
            android:text="@string/btn_Inscrit" />
    </LinearLayout>

</RelativeLayout>
